tests/test_proof/bad/let_in_condition-empty.catala_en
## Test

```catala
declaration scope A:
  context x content boolean

scope A:
  definition x under condition
    let y equals false in
    y 
  consequence equals true
```
